spade-tests/src/snapshots/spade_tests__parser__using_empty_identifier_a.snap
---
source: spade-tests/src/parser.rs
---
entity counter(clk: clock, rst: bool, max: int<8>) -> int<8> {
    reg(clk) value reset (rst: 0) =
        if value == max {
            0
        }
        else {
            conv::trunc(value + 1)
        };
    value
}


error: Use of undeclared name conv
  ┌─ testinput:7:13
  │
7 │             conv::trunc(value + 1)
  │             ^^^^ Undeclared name
