spade-tests/src/snapshots/spade_tests__parser__visibility_disallowed_before_assert.snap
---
source: spade-tests/src/parser.rs
---
entity test() {
    pub assert true;
}


error: invalid visibility marker location
  ┌─ testinput:2:5
  │
2 │     pub assert true;
  │     ^^^ ------ assert cannot have a visibility marker
  │     │    
  │     visibility markers are not allowed here
