spade-tests/src/snapshots/spade_tests__parser__visibility_disallowed_before_decl.snap
---
source: spade-tests/src/parser.rs
---
entity test() {
    pub decl x;
    let x = 0u8;
}


error: invalid visibility marker location
  ┌─ testinput:2:5
  │
2 │     pub decl x;
  │     ^^^ ---- decl cannot have a visibility marker
  │     │    
  │     visibility markers are not allowed here
