spade-tests/src/snapshots/spade_tests__parser__visibility_disallowed_before_let.snap
---
source: spade-tests/src/parser.rs
---
entity test() {
    pub let x = 0u8;
}


error: invalid visibility marker location
  ┌─ testinput:2:5
  │
2 │     pub let x = 0u8;
  │     ^^^ --- let cannot have a visibility marker
  │     │    
  │     visibility markers are not allowed here
